# build-perf-monitor

./: .gitignore  ARCHITECTURE.md  README.md  README.zh-CN.md  main.py  monitor_utils.py  projects_config.json  pyproject.toml
conf/: config.toml  projects.toml  rules.toml
docs/: README.md  README.zh-CN.md  api_reference.md  api_reference.zh-CN.md  code_style_guide.md  code_style_guide.zh-CN.md  configuration_guide.md  configuration_guide.zh-CN.md  developer_guide.md  developer_guide.zh-CN.md  storage_formats.md  storage_formats.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md
src/mymonitor/: __init__.py  category_rules.json  config.py  data_models.py  main.py  monitor_utils.py  monitor_utils.py.backup  plotter.py  process_utils.py
src/mymonitor/classification/: __init__.py  classifier.py
src/mymonitor/cli/: __init__.py  main.py  orchestrator.py
src/mymonitor/collectors/: __init__.py  async_memory_collector.py  base.py  discovery_worker.py  factory.py  hybrid_collector.py  pss_psutil.py  sampling_worker.py
src/mymonitor/config/: __init__.py  loader.py  manager.py  storage_config.py  validators.py
src/mymonitor/execution/: __init__.py  runner.py
src/mymonitor/executor/: __init__.py  build_process.py  thread_pool.py
src/mymonitor/memory_collectors/: base.py  pss_psutil_collector.py  rss_pidstat_collector.py
src/mymonitor/models/: __init__.py  config.py  hybrid_monitoring.py  results.py  runtime.py
src/mymonitor/monitoring/: __init__.py  architectures.py  coordinator.py
src/mymonitor/orchestration/: __init__.py  build_configuration.py  build_runner.py  log_manager.py  monitoring_orchestrator.py  process_manager.py  shared_state.py  signal_handler.py
src/mymonitor/runner/: __init__.py  main.py
src/mymonitor/storage/: __init__.py  base.py  data_manager.py  factory.py  parquet_storage.py
src/mymonitor/system/: __init__.py  commands.py  cpu.py  cpu_manager.py  processes.py
src/mymonitor/validation/: __init__.py  error_handler.py  exceptions.py  strategies.py  validators.py
tests/: conftest.py  fake_build_script.sh  test_async_monitoring.py  test_basic_monitoring.py  test_classification_rules.py  test_hybrid_monitoring.py  test_memory_collectors.py  test_monitoring_coordinator.py  test_plotter_tool.py  test_process_utils.py  test_thread_pool_and_error_handling.py  test_verify_process_tree.py
tools/: convert_storage.py  plotter.py  verify_process_tree.py
(+17 files in other folders)
