[project]
name = "mymonitor"
version = "0.1.0"
description = "A build process memory monitor."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars-lts-cpu[pyarrow]", # For data analysis and manipulation, pyarrow for better CSV/Parquet performance
    "plotly",          # For interactive plotting
    "psutil",          # For system and process utilities
    "kaleido",         # Optional: if you need to export plotly graphs to static images like PNG from code
]

[project.scripts]
mymonitor = "mymonitor.main:main_cli"
