[project]
name = "mymonitor"
version = "0.1.0"
description = "A build process memory monitor."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly",                          # For interactive plotting
    "polars-lts-cpu[pandas, pyarrow]", # For data analysis and manipulation, pyarrow for better CSV/Parquet performance
    "psutil",                          # For system and process utilities
    "toml",                            # For reading project configuration files
]

[project.scripts]
mymonitor = "mymonitor.cli.main:main_cli"

[project.optional-dependencies]
export = [
    "kaleido",  # Optional export functionality for static plots
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.21.0",
    "ruff", # Modern linter and formatter
    "mypy", # Type checking
]
test = [
    "pytest>=7.0",
    "pytest-cov>=6.2.1", 
]
lint = [
    "ruff",      # Modern linter and formatter
    "mypy",      # Type checking
]
